--- a/heray-app/package.json
+++ b/heray-app/package.json
@@ -19,8 +19,8 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "@tailwindcss/postcss": "^0.0.7",
     "tailwindcss": "^3.4.1",
+    "autoprefixer": "^10",
     "eslint": "^8",
     "eslint-config-next": "14.2.18",
     "@eslint/eslintrc": "^3"
