--- a/heray-app/package.json
+++ b/heray-app/package.json
@@ -12,7 +12,9 @@
     "react": "^18",
     "react-dom": "^18",
     "next": "14.2.18",
-    "@supabase/supabase-js": "^2.39.3"
+    "@supabase/supabase-js": "^2.39.3",
+    "@netlify/next": "^4",
+    "autoprefixer": "^10"
   },
   "devDependencies": {
     "typescript": "^5",
@@ -23,7 +25,6 @@
     "autoprefixer": "^10",
     "eslint": "^8",
     "eslint-config-next": "14.2.18",
-    "@eslint/eslintrc": "^3",
-    "@netlify/next": "^4"
+    "@eslint/eslintrc": "^3"
   }
 }
