--- a/heray-app/package.json
+++ b/heray-app/package.json
@@ -13,7 +13,8 @@
     "react-dom": "^18",
     "next": "14.2.18",
     "@supabase/supabase-js": "^2.39.3",
-    "autoprefixer": "^10"
+    "autoprefixer": "^10",
+    "geist": "^1.4.2"
   },
   "devDependencies": {
     "typescript": "^5",
