--- a/netlify.toml
+++ b/netlify.toml
@@ -4,8 +4,8 @@
   # Command Netlify should run to build the project
   command = "npm run build"
   # Directory to publish (Next.js output)
-  publish = "heray-app/.next"
+  publish = ".next"
 
 [functions]
   # Netlify will output Next.js API routes / middleware here
-  directory = "heray-app/.netlify/functions" 
+  directory = ".netlify/functions" 
