--- a/heray-app/package.json
+++ b/heray-app/package.json
@@ -12,17 +12,15 @@
     "react": "^18",
     "react-dom": "^18",
     "next": "14.2.18",
-    "@supabase/supabase-js": "^2.39.3",
-    "autoprefixer": "^10",
-    "geist": "^1.4.2"
+    "@supabase/supabase-js": "^2.39.3"
   },
   "devDependencies": {
     "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@tailwindcss/postcss": "^0.0.7",
     "tailwindcss": "^3.4.1",
-    "autoprefixer": "^10",
     "eslint": "^8",
     "eslint-config-next": "14.2.18",
     "@eslint/eslintrc": "^3"
