--- a/heray-app/package.json
+++ b/heray-app/package.json
@@ -23,6 +23,7 @@
     "tailwindcss": "^3.4.1",
     "eslint": "^8",
     "eslint-config-next": "14.2.18",
-    "@eslint/eslintrc": "^3"
+    "@eslint/eslintrc": "^3",
+    "@netlify/plugin-nextjs" :  "5.11.2"
   }
 }
