--- a/heray-app/package.json
+++ b/heray-app/package.json
@@ -9,21 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "next": "14.2.18",
     "@supabase/supabase-js": "^2.39.3"
   },
   "devDependencies": {
     "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "@tailwindcss/postcss": "^0.0.7",
-    "tailwindcss": "^3.4.1",
+    "@types/node": "20.11.28",
+    "@types/react": "18.2.37",
+    "@types/react-dom": "18.2.17",
+    "tailwindcss": "3.4.1",
+    "autoprefixer": "10.4.16",
     "eslint": "^8",
     "eslint-config-next": "14.2.18",
     "@eslint/eslintrc": "^3",
-    "@netlify/plugin-nextjs" :  "5.11.2"
+    "@netlify/plugin-nextjs": "5.11.2"
   }
 }
