--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,6 @@
 [build]
-  base = "heray-app"
-  command = "npm run build"
-  publish = ".netlify/output"
+  command = "npm --prefix heray-app install --legacy-peer-deps && npm --prefix heray-app run build"
+  publish = "heray-app/.netlify/output"
 
 [[plugins]]
   package = "@netlify/plugin-nextjs"
