--- a/package.json
+++ b/package.json
@@ -9,21 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.39.3",
+    "next": "^15.3.3",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "next": "14.2.18",
-    "@supabase/supabase-js": "^2.39.3"
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@eslint/eslintrc": "^3",
+    "@netlify/plugin-nextjs": "5.11.2",
     "@types/node": "20.11.28",
     "@types/react": "18.2.37",
     "@types/react-dom": "18.2.17",
-    "tailwindcss": "3.4.1",
     "autoprefixer": "10.4.16",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.18",
-    "@eslint/eslintrc": "^3",
-    "@netlify/plugin-nextjs": "5.11.2"
+    "eslint": "8.56.0",
+    "eslint-config-next": "15.3.3",
+    "tailwindcss": "3.4.1",
+    "typescript": "^5"
   }
 }
